👀 Fix background alignment on smaller screens

--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ footer > .container {
 header {
   background-attachment: fixed;
   background-image: url("/flag.png");
-  background-origin: content-box;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
